--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -246,7 +246,7 @@ p.tariff_price{font-size:14px;text-align: center}
 /* .offer_block-tariff */
 .tariff_slider .slick-track{display: -webkit-box;display: -ms-flexbox;display: flex}
 .offer_block-tariff.slick-slide{flex: 0 0 auto; height: auto;justify-content: space-between}
-.offer_block-tariff-top{border-bottom:1px solid #3f3354;width: 100%;padding-bottom: 10px}
+.offer_block-tariff-top{display: -webkit-box;display: -ms-flexbox;display: flex;gap: 10px;justify-content: space-between;flex-direction: column;border-bottom:1px solid #3f3354;width: 100%;padding-bottom: 10px}
 .offer_block-btn-wrapper{border-top:1px solid #3f3354;width:100%;padding-top:10px}
 .service_text-block {padding: 20px 0px} 
 section.page__service-offer{padding: 0;padding-top: 75px}
