--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1389,6 +1389,12 @@ p.tariff_price {
   justify-content: space-between
 }
 .offer_block-tariff-top{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
+  flex-direction: column;
   border-bottom:1px solid #3f3354;
   width: 100%;
   padding-bottom: 10px
