--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1386,7 +1386,7 @@ p.tariff_price {
 .offer_block-tariff.slick-slide{
   flex: 0 0 auto; 
   height: auto;
-  justify-content: space-between
+  justify-content: flex-start
 }
 .offer_block-tariff-top{
   display: -webkit-box;
@@ -1398,6 +1398,14 @@ p.tariff_price {
   border-bottom:1px solid #3f3354;
   width: 100%;
   padding-bottom: 10px
+}
+.tariff_body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
 }
 .offer_block-btn-wrapper{
   border-top:1px solid #3f3354;
