--- a/static/css/style.css
+++ b/static/css/style.css
@@ -786,7 +786,7 @@ main.page{
 .tariffs-block__container
 {
   max-width: 90vw;
-  margin-top: 75px
+  /* margin-top: 75px */
 }
 .case_slide_wrapper {
   position:relative;
