--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -102,7 +102,7 @@ main.page{margin-top:68px}
 .choice-block__href{font-family:"Open Sans";font-style:normal;font-weight:400;font-size:16px;line-height:24px;padding:12px 55px;background:#6025bf;border-radius:5px;text-align:center;color:var(--main-white-color);display: block;max-width: 250px;}
 .choice-block__img{position:relative;z-index:1;width: 40%;display: flex;justify-content: flex-end;align-items: stretch}
 .choice-block__img img{border-radius:5px;height: 100%;width: 100%;object-fit: cover;}
-.cases-block__container,.tariffs-block__container{max-width:90vw;margin-top: 75px}
+.cases-block__container,.tariffs-block__container{max-width:90vw;}
 .case_slide_wrapper{position:relative;margin:0 10px}
 .case_slide_wrapper::after{content:"";display:block;width:100%;height:100%;position:absolute;top:0;left:0;background:transparent;background-image:linear-gradient(to bottom,rgba(48,34,71,0),#220A3D);opacity:.8}
 .case_slide_title_wrapper{position:absolute;bottom:0;padding:0 0 37px 37px;color:#fff;z-index:1;text-transform:uppercase}
