--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -686,6 +686,12 @@
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------footer----------------------------------*/
+@media(max-width: 1000px){
+    .cities{
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
 @media(max-width:768px){
     .footer__navigation{
         order: 1;
@@ -699,6 +705,15 @@
         order: 2;
         width: 45%;
         padding-top: 10px
+    }
+    .cities{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media(max-width: 550px){
+    .cities{
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
