фикс отступ у P в тестовом выпадаюем списке

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1275,6 +1275,9 @@ margin-right: 30px;
   font-size: 10px;
 }
 
+.test_banner.faq_accordion .acor-body p{
+  margin: 0!important;
+}
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------page-header------------------------------------*/
 
