--- a/static/css/style-min.css
+++ b/static/css/style-min.css
@@ -169,6 +169,7 @@ main.page{margin-top:68px}
 .faq_accordion input:checked + label + .acor-body {height: auto;margin-top: -5px;color: var(--article-text-color);padding: 20px 30px 10px;border-bottom: 1px solid #6025BF;border-right: 1px solid #6025BF;border-left: 1px solid #6025BF;border-radius: 0 0 5px 5px}
 .test_banner{margin-bottom: 10px}
 .test_banner .acor-body{display: grid;grid-template-columns: repeat(2, 1fr);font-size: 10px}
+.test_banner.faq_accordion .acor-body p{margin: 0!important}
 .page-header{color:var(--main-white-color);font-family:"Inter";padding:25px 0 0}
 .page-header__breadcrumbs{margin:25px 0;font-size:14px;font-weight:400;color:var(--article-text-color)}
 .page-header__breadcrumbs a:active,.page-header__breadcrumbs a:visited{color:var(--article-text-color)}
