--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -846,8 +846,18 @@ main.page {
           align-items: center;
 }
 
+.services-block__text-price {
+  display: none;
+}
+
 .services-block__item:hover {
   background: #3A116D;
+}
+.services-block__item:hover .services-block__text {
+  display: none;
+}
+.services-block__item:hover .services-block__text.services-block__text-price {
+  display: block;
 }
 
 .services-block__text {
@@ -1031,25 +1041,33 @@ main.page {
   position: absolute;
   top: 0;
   left: 0;
-  background: transparent;
+  background: #000;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(48, 34, 71, 0)), to(#220A3D));
   background-image: linear-gradient(to bottom, rgba(48, 34, 71, 0), #220A3D);
-  opacity: 0.8;
+  opacity: 0.4;
 }
 
 .case_slide_title_wrapper {
   position: absolute;
-  bottom: 0;
-  padding: 0 0 37px 37px;
+  top: 0;
+  padding: 10px;
   color: #fff;
   z-index: 1;
-  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
 }
 
 .case_slide__title {
   font-family: "Inter";
   font-size: 18px;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 .case_slide_wrapper img {
@@ -1363,6 +1381,81 @@ main.page {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 5px 5px 0 0;
+}
+
+/*------------------------------------------------------------------------------------------------*/
+/*-------------------------------------------------tariffs_tabs----------------------------------*/
+.tabs {
+  font-size: 0;
+  margin-top: 50px;
+}
+
+.tabs > input[type=radio] {
+  display: none;
+}
+
+.tabs > .tabs_block {
+  display: none;
+  padding: 10px 15px;
+  font-size: 16px;
+}
+
+#tab_btn_1:checked ~ #tab_1,
+#tab_btn_2:checked ~ #tab_2,
+#tab_btn_3:checked ~ #tab_3,
+#tab_btn_4:checked ~ #tab_4 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.tabs > label {
+  margin-right: 20px;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-color: #f7f2ff;
+  color: #6025bf;
+  border-radius: 10px;
+  padding: 5px 10px;
+  font-size: 18px;
+  line-height: 1.5;
+  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+  cursor: pointer;
+  position: relative;
+  top: 1px;
+  text-transform: uppercase;
+}
+
+.tabs > input[type=radio]:checked + label {
+  background-color: #6025bf;
+  color: #f7f2ff;
+}
+
+.tabs_block {
+  margin-top: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+  border-radius: 10px;
+  background-color: #6025bf;
+  color: #f7f2ff;
+}
+
+.tab_header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-size: 25px;
 }
 
 /*------------------------------------------------------------------------------------------------*/
