--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -808,7 +808,32 @@ body {
     margin-top: 150px;
     margin-bottom: 14px;
   }
-  
+  /*---------------------------------------------------------------------------------------------*/
+  /*-----------------------------------------------staff----------------------------*/
+.staff_wrapper{
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+
+}
+
+.half_column{
+  width:50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.staff_item{
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 3px $main-white-color;
+
+  .staff_name{
+    color: $article-text-color;
+  }
+}
+
   /*---------------------------------------------------------------------------------------------*/
   /*-----------------------------------------------achievments_section----------------------------*/
   
@@ -822,6 +847,27 @@ body {
     width: 50%
   }
   
+  /*---------------------------------------------------------------------------------------------*/
+  /*-----------------------------------------------guarantee----------------------------*/
+
+  .guarantee_slider{
+    margin-top: 20px;
+  }
+
+  .guarantee_item {    
+    display: flex!important;
+    flex-direction: column;
+    align-items: center;
+    gap:10px;
+
+    .guarantee_icon {
+      font-size: 40px;
+    }
+    .guarantee_text {
+      text-transform: uppercase;
+      text-align: center;
+  }
+}
   
   /*---------------------------------------------------------------------------------------------*/
   /*-----------------------------------------------page__reviews-block----------------------------*/
@@ -1192,7 +1238,8 @@ body {
     font-family: 'Inter';
   }
   
-  .faq_accordion .acor-body {
+  .faq_accordion .acor-body,
+  .accordion .acor-body {
     width: 100%;
     margin: 0 auto;
     height: 0;
@@ -1204,10 +1251,12 @@ body {
     overflow: hidden;
     font-size: 16px;
   }
-  .faq_accordion .acor-body p {
+  .faq_accordion .acor-body p,
+  .accordion .acor-body p {
     margin: 0 0 10px;
   }
-  .faq_accordion label {
+  .faq_accordion label,
+  .accordion label {
     margin-top: 10px;
     cursor: pointer;
     display: block;
@@ -1223,27 +1272,32 @@ body {
     border-radius: 5px
   }
   
-  .faq_accordion input{
+  .faq_accordion input,
+  .accordion input{
     display: none;
   }
-  .faq_accordion label:before {
+  .faq_accordion label:before,
+  .accordion label:before {
     content: '\276F';
     float: right;
     color: $article-text-color
   }
-  .faq_accordion input:checked + label {  
+  .faq_accordion input:checked + label,
+  .accordion input:checked + label {  
     color: $main-white-color;
     border: 1px 1px 0px 1px;
     border-bottom: none;
     border-color: #6025BF;
     border-radius: 5px 5px 0 0
   }
-  .faq_accordion input:checked + label:before {
+  .faq_accordion input:checked + label:before,
+  .accordion input:checked + label:before {
     transition: transform .35s;
     transform: rotate(90deg);
     color: #6025BF
   }
-  .faq_accordion input:checked + label + .acor-body {
+  .faq_accordion input:checked + label + .acor-body,
+  .accordion input:checked + label + .acor-body {
     height: auto;
     margin-top: -5px;
     color: $article-text-color;
