--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1458,7 +1458,7 @@ body {
     flex-direction: column;
     border-bottom:1px solid #3f3354;
     width: 100%;
-    padding-bottom: 10px
+    //padding-bottom: 10px
   }
   .tariff_body {
     display: flex;
