--- a/static/css/new_style.css
+++ b/static/css/new_style.css
@@ -1274,6 +1274,21 @@ section.form_row {
 }
 
 /*-------------------------------------------------------------------------------------------------------*/
+/*---------------------------------------------technology-----------------------------------*/
+.techno_slider {
+  background: #e3e3e3;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.techno_slider .slick-track {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+
+/*-------------------------------------------------------------------------------------------------------*/
 /*---------------------------------------------page__service-selection-----------------------------------*/
 .service-selection__container {
   background: #570f65;
