--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -963,6 +963,23 @@ body {
     margin-bottom: 33px;
   }
   
+   /*-------------------------------------------------------------------------------------------------------*/
+  /*---------------------------------------------technology-----------------------------------*/
+
+  .techno_slider {
+    background: #e3e3e3;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+
+    .slick-track{
+      display: flex;
+      gap:10px;      
+    }
+}
+
+
+
   /*-------------------------------------------------------------------------------------------------------*/
   /*---------------------------------------------page__service-selection-----------------------------------*/
   
