--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1500,6 +1500,16 @@ body {
     padding: 0;
     padding-top: 75px;
   }
+
+  .text_wrapper{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    img{
+      border-radius: 10px;
+    }
+  }
   /*---------------------------------------------------------------------------------------------------*/
   /*----------------------------------------------------article-page-----------------------------------*/
   
