--- a/static/css/new_style.scss
+++ b/static/css/new_style.scss
@@ -1202,7 +1202,7 @@ body {
     vertical-align: middle;
     user-select: none;
     background-color: $main-white-color;
-    color: #6025bf;
+    color: #a769f7;
     border-radius: 10px;
     padding: 5px 10px;
     font-size: 18px;
@@ -1224,7 +1224,7 @@ body {
     flex-direction: column;
     gap: 20px;
     border-radius: 10px;
-    background-color: #6025bf;
+    background-color: #a769f7;
     color: $main-white-color;   
   }
 
